--- a/faces/package.json
+++ b/faces/package.json
@@ -14,7 +14,8 @@
     "@tensorflow/tfjs": "^4.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
